{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 32,
  "lineage": "3c62d3ee-f327-ca26-1b71-2853ddff9a71",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080",
                  "9090",
                  "3000",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-28T04:47:19.578-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-http-https",
            "log_config": [],
            "name": "devops-gke-cluster-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
            "priority": 1000,
            "project": "terraform-k8s-project-481806",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-28T04:47:19.493-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-internal",
            "log_config": [],
            "name": "devops-gke-cluster-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
            "priority": 1000,
            "project": "terraform-k8s-project-481806",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-28T04:47:19.582-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-ssh",
            "log_config": [],
            "name": "devops-gke-cluster-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
            "priority": 1000,
            "project": "terraform-k8s-project-481806",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/firewalls/devops-gke-cluster-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/zones/us-central1-a/disks/jenkins-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-k8s-project-481806/zones/us-central1-a/instances/jenkins-server",
            "instance_id": "2828125586843277342",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCp4nFn7rmzX2eSINDDsS+NDSmqcJyypuGfwf8WZf69T3StS4AXhx91pVEelR6cgUE9fAJYAnOORm1Zak6/QUt1uei7+YeO3+JOAf8598Kj9+2O1LgqECLIPOoo2T1rkDkgn49BJI6ID9fXp6g4bV0FGkvSovA+IDqy/KeIdaiiSf3m6VsDw1qkVrtqOm23Oi5go+/Ws5j9BEJya7AdeGbmmIFsuITOub0aGKDF8+fOr//jLevjoA1FyItRT2Xtn94UWnqK1DrDZtSCMLdtdBPL7phuzCdOSJc23ewtjI0uip1p0Sg++PH122GeL2/B+Ecx7q+SOXm2A3ySL5N80bIXLy7nqUSs6fEGDhPVqKVK1GAVvSmDByLAOhyii9cMk24YDGnz0jNDLb7v1AkuX31qZflTdxpwOZ+3JewW6QYr3t [...]
            },
            "metadata_fingerprint": "wS6v0ilH9c0=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update system\napt-get update\napt-get upgrade -y\n\n# Install Java\napt-get install -y openjdk-11-jdk\n\n# Install Jenkins\nwget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | apt-key add -\nsh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ \u003e /etc/apt/sources.list.d/jenkins.list'\napt-get update\napt-get install -y jenkins\n\n# Install Docker\napt-get install -y docker.io\nsystemctl start docker\nsystemctl e [...]
            "name": "jenkins-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.59.247.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/regions/us-central1/subnetworks/devops-gke-cluster-subnet",
                "subnetwork_project": "terraform-k8s-project-481806"
              }
            ],
            "project": "terraform-k8s-project-481806",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/zones/us-central1-a/instances/jenkins-server",
            "service_account": [
              {
                "email": "330652062132-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "jenkins"
            ],
            "tags_fingerprint": "74fLrx2fvgE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.gke_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
            "mtu": 0,
            "name": "devops-gke-cluster-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8223082519004485679",
            "project": "terraform-k8s-project-481806",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-28T04:47:20.069-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-k8s-project-481806/regions/us-central1/subnetworks/devops-gke-cluster-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "devops-gke-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/global/networks/devops-gke-cluster-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-k8s-project-481806",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-k8s-project-481806/regions/us-central1/subnetworks/devops-gke-cluster-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}